<resources>
    <string name="app_name">test-android-app</string>
    <string name="logo">logo</string>
    <string name="top">Top</string>
    <string name="hot">Hot</string>
    <string name="new_images">New</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="author">Author</string>
    <string name="date_time">X hours ago</string>
    <string name="image">Image</string>
    <string name="title">Title text</string>
    <string name="comments">Comments number</string>
    <string name="button">more posts</string>
</resources>
