<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context="com.vrgsoft.TopRedditApp.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/asideLayout"
            android:layout_width="70dp"
            android:layout_height="0dp"
            android:background="@color/aside_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <ImageView
                android:id="@+id/logo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/ic_reddit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/logo"/>

        <TextView
                android:id="@+id/top"
                android:text="@string/top"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:rotation="270"
                android:gravity="center"
                android:fontFamily="@font/montserrat_light"
                android:textSize="24sp"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:textAlignment="center"/>

        <TextView
                android:id="@+id/hot"
                android:text="@string/hot"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:rotation="270"
                android:gravity="center"
                android:fontFamily="@font/montserrat_light"
                android:textSize="20sp"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@+id/top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:textAlignment="center"/>

        <TextView
                android:id="@+id/new_images"
                android:text="@string/new_images"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:rotation="270"
                android:gravity="center"
                android:fontFamily="@font/montserrat_light"
                android:textSize="20sp"
                android:textColor="#000000"
                app:layout_constraintTop_toBottomOf="@+id/hot"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:textAlignment="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintStart_toEndOf="@+id/asideLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
            android:id="@+id/linLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button"
                android:textAlignment="center"
                android:textStyle="italic"
                android:textAllCaps="false"
                android:textSize="11sp"
                android:fontFamily="sans-serif"
                android:textColor="#FFFFFF"
                app:backgroundTint="#FF774C"
                app:cornerRadius="5dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>